still stuck on typescript issue

--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -14,18 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #2f66d4;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgba(128, 136, 124, 0);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #a961fb;
 }
 
 @keyframes App-logo-spin {
